content/versions/3.2/guides/_attributes.adoc
// Common attributes.
// --> No blank lines (it ends the document header)
:project-name: Quarkus
:quarkus-version: 3.2.12.Final
:quarkus-platform-groupid: io.quarkus.platform
// .
:maven-version: 3.9.3
:graalvm-version: jdk-17
:graalvm-flavor: jdk-17
:mandrel-version: jdk-17
:mandrel-flavor: jdk-17
:surefire-version: 3.0.0
:gradle-version: 8.4
:elasticsearch-version: 7.16.3
:elasticsearch-image: docker.io/elastic/elasticsearch:7.16.3
:infinispan-version: ${infinispan.version}
:infinispan-protostream-version: ${infinispan.protostream.version}
:logstash-image: docker.io/elastic/logstash:7.16.3
:kibana-image: docker.io/elastic/kibana:7.16.3
:keycloak-docker-image: quay.io/keycloak/keycloak:22.0.5
:jandex-version: 3.1.6
:jandex-gradle-plugin-version: 1.0.0
:kotlin-version: 1.8.22
:grpc-version: 1.56.0
:protoc-version: 3.22.0
:gcf-invoker-version: 1.3.0
:hibernate-orm-version: 6.2
:hibernate-search-version: 6.2
// .
:quarkus-home-url: https://quarkus.io
:quarkus-org-url: https://github.com/quarkusio
:quarkus-site-getting-started: /get-started
:quarkus-writing-extensions-guide: /guides/writing-extensions
:quarkus-site-publications: /publications
:quarkus-base-url: https://github.com/quarkusio/quarkus
:quarkus-clone-url: https://github.com/quarkusio/quarkus.git
:quarkus-archive-url: https://github.com/quarkusio/quarkus/archive/3.2.zip
:quarkus-blob-url: https://github.com/quarkusio/quarkus/blob/3.2
:quarkus-tree-url: https://github.com/quarkusio/quarkus/tree/3.2
:quarkus-issues-url: https://github.com/quarkusio/quarkus/issues
:quarkus-images-url: https://github.com/quarkusio/quarkus-images/tree
:quarkus-chat-url: https://quarkusio.zulipchat.com
:quarkus-mailing-list-subscription-email: quarkus-dev+subscribe@googlegroups.com
:quarkus-mailing-list-index: https://groups.google.com/d/forum/quarkus-dev
:quickstarts-base-url: https://github.com/quarkusio/quarkus-quickstarts
:quickstarts-clone-url: https://github.com/quarkusio/quarkus-quickstarts.git
:quickstarts-archive-url: https://github.com/quarkusio/quarkus-quickstarts/archive/3.2.zip
:quickstarts-blob-url: https://github.com/quarkusio/quarkus-quickstarts/blob/3.2
:quickstarts-tree-url: https://github.com/quarkusio/quarkus-quickstarts/tree/3.2
// .
:hibernate-orm-docs-url: https://docs.jboss.org/hibernate/orm/{hibernate-orm-version}/userguide/html_single/Hibernate_User_Guide.html
:hibernate-search-docs-url: https://docs.jboss.org/hibernate/search/{hibernate-search-version}/reference/en-US/html_single/
// .
:amazon-services-guide: https://quarkiverse.github.io/quarkiverse-docs/quarkus-amazon-services/dev/index.html
:config-consul-guide: https://quarkiverse.github.io/quarkiverse-docs/quarkus-config-extensions/dev/consul.html
:hibernate-search-orm-elasticsearch-aws-guide: https://quarkiverse.github.io/quarkiverse-docs/quarkus-hibernate-search-extras/dev/index.html
:neo4j-guide: https://quarkiverse.github.io/quarkiverse-docs/quarkus-neo4j/dev/index.html
:vault-guide: https://quarkiverse.github.io/quarkiverse-docs/quarkus-vault/dev/index.html
:vault-datasource-guide: https://quarkiverse.github.io/quarkiverse-docs/quarkus-vault/dev/vault-datasource.html
:micrometer-registry-guide: https://quarkiverse.github.io/quarkiverse-docs/quarkus-micrometer-registry/dev/index.html
:quarkus-migration-guide: https://github.com/quarkusio/quarkus/wiki/Migration-Guides[Migration Guides]
// .
:create-app-group-id: org.acme
:create-cli-group-id: {create-app-group-id}
// .
include::_attributes-local.adoc[]