content/versions/3.8/guides/_attributes.adoc
// Common attributes.
// --> No blank lines (it ends the document header)
:project-name: Quarkus
:quarkus-version: 3.8.6.1
:quarkus-platform-groupid: io.quarkus.platform
// .
:maven-version: 3.9.6
:graalvm-version: for JDK 21
:graalvm-docs-version: jdk21
:graalvm-flavor: jdk-21
:mandrel-flavor: jdk-21
:surefire-version: 3.2.5
:gradle-version: 8.5
:elasticsearch-version: 8.9.1
:elasticsearch-image: docker.io/elastic/elasticsearch:8.9.1
:opensearch-image: docker.io/opensearchproject/opensearch:2.9.0
:infinispan-version: ${infinispan.version}
:infinispan-protostream-version: ${infinispan.protostream.version}
:logstash-image: docker.io/elastic/logstash:8.9.1
:kibana-image: docker.io/elastic/kibana:8.9.1
:keycloak-docker-image: quay.io/keycloak/keycloak:24.0.4
:jandex-version: 3.1.6
:jandex-gradle-plugin-version: 1.0.0
:kotlin-version: 1.9.22
:grpc-version: 1.59.1
:protoc-version: 3.25.5
:gcf-invoker-version: 1.3.0
:hibernate-orm-version: 6.4
:hibernate-search-version: 7.0
// .
:quarkus-home-url: https://quarkus.io
:quarkus-org-url: https://github.com/quarkusio
:quarkus-site-getting-started: /get-started
:quarkus-writing-extensions-guide: /guides/writing-extensions
:quarkus-site-publications: /publications
:quarkus-base-url: https://github.com/quarkusio/quarkus
:quarkus-clone-url: https://github.com/quarkusio/quarkus.git
:quarkus-archive-url: https://github.com/quarkusio/quarkus/archive/main.zip
:quarkus-blob-url: https://github.com/quarkusio/quarkus/blob/main
:quarkus-tree-url: https://github.com/quarkusio/quarkus/tree/main
:quarkus-issues-url: https://github.com/quarkusio/quarkus/issues
:quarkus-images-url: https://github.com/quarkusio/quarkus-images/tree
:quarkus-chat-url: https://quarkusio.zulipchat.com
:quarkus-mailing-list-subscription-email: quarkus-dev+subscribe@googlegroups.com
:quarkus-mailing-list-index: https://groups.google.com/d/forum/quarkus-dev
:quickstarts-base-url: https://github.com/quarkusio/quarkus-quickstarts
:quickstarts-clone-url: https://github.com/quarkusio/quarkus-quickstarts.git
:quickstarts-archive-url: https://github.com/quarkusio/quarkus-quickstarts/archive/main.zip
:quickstarts-blob-url: https://github.com/quarkusio/quarkus-quickstarts/blob/main
:quickstarts-tree-url: https://github.com/quarkusio/quarkus-quickstarts/tree/main
// .
:hibernate-orm-docs-url: https://docs.jboss.org/hibernate/orm/{hibernate-orm-version}/userguide/html_single/Hibernate_User_Guide.html
:hibernate-search-docs-url: https://docs.jboss.org/hibernate/search/{hibernate-search-version}/reference/en-US/html_single/
// .
:amazon-services-guide: https://quarkiverse.github.io/quarkiverse-docs/quarkus-amazon-services/dev/index.html
:config-consul-guide: https://quarkiverse.github.io/quarkiverse-docs/quarkus-config-extensions/dev/consul.html
:hibernate-search-orm-elasticsearch-aws-guide: https://quarkiverse.github.io/quarkiverse-docs/quarkus-hibernate-search-extras/dev/index.html
:neo4j-guide: https://quarkiverse.github.io/quarkiverse-docs/quarkus-neo4j/dev/index.html
:vault-guide: https://quarkiverse.github.io/quarkiverse-docs/quarkus-vault/dev/index.html
:vault-datasource-guide: https://quarkiverse.github.io/quarkiverse-docs/quarkus-vault/dev/vault-datasource.html
:micrometer-registry-guide: https://quarkiverse.github.io/quarkiverse-docs/quarkus-micrometer-registry/dev/index.html
:quarkus-migration-guide: https://github.com/quarkusio/quarkus/wiki/Migration-Guides[Migration Guides]
// .
:create-app-group-id: org.acme
:create-cli-group-id: {create-app-group-id}
// .
include::_attributes-local.adoc[]
